# just-cli

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.claude/skills/textual/: README.md  SKILL.md  guide.md  quick-reference.md
.github/workflows/: publish.yml
.sisyphus/: boulder.json
.sisyphus/plans/: brew-installer.md
docs/: extension_guide.md
scripts/ai_coding/: agents2claude.py  claude2agents.py
src/just/: __init__.py  cli.py
src/just/commands/: archive.py  cloudflared.py  download.py  edit.py  extract.py  initialize.py  install.py  linux.py  note.py  tunnel.py  update.py  view.py  workspace.py
src/just/config/: __init__.py  utils.py
src/just/core/: edit.py  extension.py  system_probe.py  utils.py
src/just/installers/: AGENTS.md
src/just/models/: __init__.py  system_info.py
src/just/tui/: __init__.py  editor.py  extension.py  markdown.py  note.py  workspace.py
src/just/utils/: AGENTS.md  (+17 more)
tests/: AGENTS.md  Dockerfile  docker_container.py  manual_test_download.py  requirements.txt  run_tests.py  test_archive_creation.py  test_archive_extraction.py  test_archive_utils.py  test_bash_script_installer.py  test_create_typer_script.py  test_download.py  test_extension.py  test_extension_generator.py  test_file_utils.py  test_init.py  test_installer.py  test_installer_e2e.py  test_linux_commands.py  test_parse_just_commands.py  test_progress_utils.py  test_repo.py  test_system_probe.py  testing.py
tests/container_installers/: Dockerfile.installers  run_installer_tests.py  test_installers.py
tests/test_extension/: README.md  test_ext.py
(+84 files in other folders)
