[project]
name = "just"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zzzcb", email = "zjxs.zzzcb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "py7zr>=1.0.0",
    "rich>=14.2.0",
    "textual>=6.4.0",
    "typer>=0.20.0",
    "zstandard>=0.25.0",
]

[project.scripts]
just = "just.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
