[project]
name = "just-cli"
version = "0.2.0"
description = "Your all-in-one CLI Toolkit"
readme = "README.md"
authors = [
    { name = "zzzcb", email = "zjxs.zzzcb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "prompt-toolkit>=3.0.0",
    "python-dotenv",
    "py7zr",
    "rich>=14.2.0",
    "textual>=6.4.0",
    "typer>=0.20.0",
    "zstandard",
]

[project.scripts]
just = "just.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/just"]